.k8s/frontend/deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ${K8S_NAMESPACE}-frontend-${BRANCH_HASH}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${K8S_NAMESPACE}-frontend-${BRANCH_HASH}
  template:
    metadata:
      labels:
        app: ${K8S_NAMESPACE}-frontend-${BRANCH_HASH}
        git/branch: ${BRANCH_NAME}
        git/commit: ${COMMIT}
        git/tag: "${COMMIT_TAG}"
        gitlab/job: "${JOB_ID}"
    spec:
      containers:
        - image: ${REGISTRY}/frontend:${IMAGE_TAG}
          name: ${K8S_NAMESPACE}-frontend
          ports:
            - containerPort: ${PORT}
          livenessProbe:
            httpGet:
              path: /
              port: ${PORT}
            initialDelaySeconds: 3
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: ${PORT}
            initialDelaySeconds: 3
            periodSeconds: 5
