.k8s/frontend/service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: work-in-france-frontend
spec:
  selector:
    app: work-in-france-frontend
  ports:
    - port: 80
      name: frontend
